// Vitest Snapshot v1

exports[`normalize-page > /404 page 1`] = `
{
  "activeIndex": 0,
  "activePath": [],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": undefined,
  "directories": [
    {
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "docsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDirectories": [
    {
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > /500 page 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "kind": "MdxPage",
      "name": "500",
      "route": "/500",
      "theme": {
        "layout": "raw",
      },
      "title": "500",
      "type": "page",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "raw",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "page",
  "directories": [
    {
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "docsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDirectories": [
    {
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "name": "get-started",
      "route": "/get-started",
      "title": "Get Started",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > en-US getting-started 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > en-US home 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "nav",
  "directories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "Getting Started",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "options",
          "route": "/docs/options",
          "title": "Options",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "Global Configuration",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "Data Fetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "Auto Revalidation",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "Conditional Data Fetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "Arguments",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "Mutation",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "Pagination",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "Prefetching",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG and SSR",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "Middleware",
          "type": "doc",
        },
        {
          "children": [
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "Cache",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "Performance",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "en-US",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "Advanced",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "Change Log",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
      "title": "Docs",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "Basic Usage",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "basic",
          "route": "/examples/basic",
          "title": "Basic Usage",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Authentication",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "auth",
          "route": "/examples/auth",
          "title": "Authentication",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Infinite Loading",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "Infinite Loading",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Error Handling",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "Error Handling",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
      "title": "Examples",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "Announcing SWR 1.0",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
      "title": "Blog",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "React Hooks for Data Fetching",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "index",
      "route": "/",
      "title": "Introduction",
      "type": "nav",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "Getting Started",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "options",
      "route": "/docs/options",
      "title": "Options",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "Global Configuration",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "Auto Revalidation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "Conditional Data Fetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "Arguments",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "Mutation",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "Pagination",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "Prefetching",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG and SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "Middleware",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "Cache",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "Performance",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "Change Log",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Basic Usage",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "basic",
      "route": "/examples/basic",
      "title": "Basic Usage",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Authentication",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "auth",
      "route": "/examples/auth",
      "title": "Authentication",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Infinite Loading",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "Infinite Loading",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Error Handling",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "Error Handling",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "Almost 2 years ago we open sourced SWR, the tiny data-fetching React library that people love. Today we are reaching another milestone: the 1.0 version of SWR.",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "Announcing SWR 1.0",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > zh-CN getting-started 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "doc",
  "directories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;

exports[`normalize-page > zh-CN home 1`] = `
{
  "activeIndex": 0,
  "activePath": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
  ],
  "activeThemeContext": {
    "breadcrumb": true,
    "collapsed": false,
    "footer": true,
    "layout": "default",
    "navbar": true,
    "pagination": true,
    "sidebar": true,
    "timestamp": true,
    "toc": true,
    "typesetting": "default",
  },
  "activeType": "nav",
  "directories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "children": [
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "getting-started",
          "route": "/docs/getting-started",
          "title": "入门",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "options",
          "route": "/docs/options",
          "title": "选项",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "global-configuration",
          "route": "/docs/global-configuration",
          "title": "全局配置",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "data-fetching",
          "route": "/docs/data-fetching",
          "title": "数据请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/docs/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "revalidation",
          "route": "/docs/revalidation",
          "title": "自动重新请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "conditional-fetching",
          "route": "/docs/conditional-fetching",
          "title": "条件数据请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "arguments",
          "route": "/docs/arguments",
          "title": "传入参数",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "mutation",
          "route": "/docs/mutation",
          "title": "数据更改",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "pagination",
          "route": "/docs/pagination",
          "title": "分页",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "prefetching",
          "route": "/docs/prefetching",
          "title": "预请求",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "with-nextjs",
          "route": "/docs/with-nextjs",
          "title": "Next.js SSG 和 SSR",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "typescript",
          "route": "/docs/typescript",
          "title": "Typescript",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "suspense",
          "route": "/docs/suspense",
          "title": "Suspense",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "middleware",
          "route": "/docs/middleware",
          "title": "中间件",
          "type": "doc",
        },
        {
          "children": [
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "cache",
              "route": "/docs/advanced/cache",
              "title": "缓存",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "performance",
              "route": "/docs/advanced/performance",
              "title": "性能",
              "type": "doc",
            },
            {
              "kind": "MdxPage",
              "locale": "zh-CN",
              "name": "react-native",
              "route": "/docs/advanced/react-native",
              "title": "React Native",
              "type": "doc",
            },
          ],
          "kind": "Folder",
          "name": "advanced",
          "route": "/docs/advanced",
          "title": "高级",
          "type": "doc",
        },
        {
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "change-log",
          "route": "/docs/change-log",
          "title": "更新日志",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "docs",
      "route": "/docs",
      "title": "文档",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "full": true,
            "title": "基本用法",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "basic",
          "route": "/examples/basic",
          "title": "基本用法",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "身份验证",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "auth",
          "route": "/examples/auth",
          "title": "身份验证",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "无限加载",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "infinite-loading",
          "route": "/examples/infinite-loading",
          "title": "无限加载",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "错误处理",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "error-handling",
          "route": "/examples/error-handling",
          "title": "错误处理",
          "type": "doc",
        },
        {
          "frontMatter": {
            "full": true,
            "title": "Next.js SSR",
          },
          "kind": "MdxPage",
          "locale": "en-US",
          "name": "ssr",
          "route": "/examples/ssr",
          "title": "Next.js SSR",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "examples",
      "route": "/examples",
      "title": "示例",
      "type": "nav",
    },
    {
      "children": [
        {
          "frontMatter": {
            "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
            "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
          },
          "kind": "MdxPage",
          "locale": "zh-CN",
          "name": "swr-v1",
          "route": "/blog/swr-v1",
          "title": "SWR 1.0 发布",
          "type": "doc",
        },
      ],
      "kind": "Folder",
      "name": "blog",
      "route": "/blog",
      "title": "博客",
      "type": "nav",
    },
  ],
  "docsDirectories": [],
  "flatDirectories": [
    {
      "frontMatter": {
        "title": "用于数据请求的 React Hooks 库",
      },
      "hidden": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "index",
      "route": "/",
      "title": "简介",
      "type": "nav",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "flatDocsDirectories": [
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "getting-started",
      "route": "/docs/getting-started",
      "title": "入门",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "options",
      "route": "/docs/options",
      "title": "选项",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "global-configuration",
      "route": "/docs/global-configuration",
      "title": "全局配置",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "data-fetching",
      "route": "/docs/data-fetching",
      "title": "数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/docs/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "revalidation",
      "route": "/docs/revalidation",
      "title": "自动重新请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "conditional-fetching",
      "route": "/docs/conditional-fetching",
      "title": "条件数据请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "arguments",
      "route": "/docs/arguments",
      "title": "传入参数",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "mutation",
      "route": "/docs/mutation",
      "title": "数据更改",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "pagination",
      "route": "/docs/pagination",
      "title": "分页",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "prefetching",
      "route": "/docs/prefetching",
      "title": "预请求",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "with-nextjs",
      "route": "/docs/with-nextjs",
      "title": "Next.js SSG 和 SSR",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "typescript",
      "route": "/docs/typescript",
      "title": "Typescript",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "suspense",
      "route": "/docs/suspense",
      "title": "Suspense",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "middleware",
      "route": "/docs/middleware",
      "title": "中间件",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "cache",
      "route": "/docs/advanced/cache",
      "title": "缓存",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "performance",
      "route": "/docs/advanced/performance",
      "title": "性能",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "react-native",
      "route": "/docs/advanced/react-native",
      "title": "React Native",
      "type": "doc",
    },
    {
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "change-log",
      "route": "/docs/change-log",
      "title": "更新日志",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "基本用法",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "basic",
      "route": "/examples/basic",
      "title": "基本用法",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "身份验证",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "auth",
      "route": "/examples/auth",
      "title": "身份验证",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "无限加载",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "infinite-loading",
      "route": "/examples/infinite-loading",
      "title": "无限加载",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "错误处理",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "error-handling",
      "route": "/examples/error-handling",
      "title": "错误处理",
      "type": "doc",
    },
    {
      "frontMatter": {
        "full": true,
        "title": "Next.js SSR",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "en-US",
      "name": "ssr",
      "route": "/examples/ssr",
      "title": "Next.js SSR",
      "type": "doc",
    },
    {
      "frontMatter": {
        "description": "大约两年前，我们开源了 SWR，大家喜爱的小型数据请求 React 库。今天，我们迎来了另一个里程碑：SWR 1.0 版本发布。",
        "image": "https://assets.vercel.com/image/upload/v1630059453/swr/v1.png",
      },
      "isUnderCurrentDocsTree": true,
      "kind": "MdxPage",
      "locale": "zh-CN",
      "name": "swr-v1",
      "route": "/blog/swr-v1",
      "title": "SWR 1.0 发布",
      "type": "doc",
    },
  ],
  "topLevelNavbarItems": [],
}
`;
